Fixed an Issue on Mobile Counters

--- a/src/pages/index/sub/contadores_mobile/style.css
+++ b/src/pages/index/sub/contadores_mobile/style.css
@@ -80,19 +80,20 @@
 .contadores-m-container .segundo .img-sob img {
     object-fit: cover;
     height: 50vh;
-    width: 45vw;
+    width: 40vw;
 }
 
 .contadores-m-container .segundo .textos {
     margin-right: 5vw;
     display: flex;
     flex-direction: column;
+    align-items: flex-end;
 }
 
 .contadores-m-container .segundo .textos h2 {
-    width: 40vw;
+    width: 50vw;
     font-weight: normal;
-    font-size: 35px;
+    font-size: 30px;
     line-height: 52px;
     text-align: right;
     text-transform: uppercase;
@@ -101,12 +102,13 @@
 }
 
 .contadores-m-container .segundo .textos button {
+    text-align: right;
     margin-top: 20px;
-
+    width: fit-content;
     border: 0;
     color: white;
-    font-size: 20px;
-    padding: 10px 26px;
+    font-size: 17px;
+    padding: 10px 15px;
     font-weight: 400;
     text-transform: uppercase;
 
